k8s/go-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: go-app
  labels:
    app: go-app
spec:
  containers:
    - name: go-app
      image: bwbayu/go-app:latest
      imagePullPolicy: Always
      ports:
        - containerPort: 8081
