k8s/app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  containers:
    - name: mysql-container
      image: mysql:latest
      ports:
        - containerPort: 3306
      volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
  volumes:
    - name: mysql-storage
      persistentVolumeClaim:
        claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  name: go-app
  labels:
    app: go-app
spec:
  containers:
    - name: go-app
      image: bwbayu/go-app:latest
      imagePullPolicy: Always
      ports:
        - containerPort: 8081
